...
                enabled: enabled,
                title: const Text('Light'),
              ),
              RadioListTile<ThemeMode>(
                value: ThemeMode.dark,
                enabled: enabled,
                title: const Text('Dark'),
              ),
            ],
          ),
        ),
      ],
    );
...
